--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@nuxtjs/composition-api": "^0.33.1",
+    "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
