--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
-    "test": "jest"
+    "test": "jest",
+    "e2e": "cypress open --browser chrome",
+    "e2e:silent": "cypress run"
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.33.1",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
@@ -37,12 +40,15 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
     "@types/babel-core": "^6.25.7",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^28.1.6",
     "@vue/test-utils": "^1.2.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
+    "cypress": "^10.4.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.4",
